--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-vector-icons": "^10.0.3"
   },
