APK generation and ui gif file added for the project

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,12 @@ android {
         versionName "1.0"
     }
     signingConfigs {
+        release {
+            storeFile file('exelon-release-key.keystore')
+            storePassword 'exelon'
+            keyAlias 'exelon-key-alias'
+            keyPassword 'exelon'
+            }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
